@startuml

title __Viral Email Class Diagram__\n

  namespace org.example {
    class org.example.JavaMailUtil {
        - filename : String
        - hasAttachment : Boolean
        {static} - props : Properties
        - setSession : Session
        + JavaMailUtil()
        + getAddress()
        + hasAttachment()
        + isLogin()
        + sendMail()
        - isAttached()
        - setFilename()
        - setProps()
        - setSession()
    }
  }
  

  namespace org.example {
    class org.example.ViewModel {
        - fileButton : Button
        - filename : String
        - hyperlink : Hyperlink
        - sendMultiple : Button
        - toInput : TextField
        - window : Stage
        + ViewModel()
        + handle()
        - composeEmail()
        - hyperlink()
        - loginScreen()
        - recipientLayout()
        - setFilename()
        - setRecipients()
        - subjectLayout()
        - textFieldStyle()
    }
  }
  

  namespace org.example {
    class org.example.extractTxt {
        + strRecipients : String
        + extractTxt()
        - addToList()
        - readList()
    }
  }
  

  namespace org.example {
    class org.example.main {
        ~ window : Stage
        {static} + main()
        + start()
    }
  }
  

  org.example.ViewModel .up.|> javafx.event.EventHandler
  org.example.ViewModel o-- org.example.JavaMailUtil : util
  org.example.main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
